# Insider-Agent

./: .gitignore  README.md  app.py  debug_loop.py  ingest.py  main.py  pyproject.toml  requirements.txt  test_pipeline.py
data/raw_docs/: srm_insider_manual.txt
data/vector_store/: chroma.sqlite3
src/: agent.py  config.py  tools.py  vector_store.py
